test/feature/TemplateLiterals/Error_Disabled.js
// Should not compile.
// Options: --template-literals=false
// SyntaxError: feature/TemplateLiterals/Error_Disabled.js:5:1: Unexpected token `

`abc`;
